--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         // =====================================================
         
         // 1. Replace with your Firebase database URL (from Step 3)
-        const FIREBASE_DATABASE_URL = "https://console.firebase.google.com/u/0/project/plmb2v/database/plmb2v-default-rtdb/data/~2F";
+        const FIREBASE_DATABASE_URL = "https://plmb2v-default-rtdb.firebaseio.com/";
         
         // 2. Change this admin password before sharing!
         const ADMIN_PASSWORD = "buttstuff69";
